--- a/ToggleApp/app/src/main/res/layout/main.xml
+++ b/ToggleApp/app/src/main/res/layout/main.xml
@@ -23,8 +23,16 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/msg_btn_toggle"/>
-    </LinearLayout>
 
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+    <TextView
+        android:id="@+id/tv_display"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 
 </LinearLayout>
