--- a/ToggleApp/app/src/main/res/values/styles.xml
+++ b/ToggleApp/app/src/main/res/values/styles.xml
@@ -6,5 +6,15 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="ToggleStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="ToggleStyle.Important">
+        <item name="android:textColor">@android:color/holo_red_dark</item>
+    </style>
+
 
 </resources>
