--- a/ToggleApp/app/src/main/res/layout/main.xml
+++ b/ToggleApp/app/src/main/res/layout/main.xml
@@ -4,43 +4,35 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
     <TextView
+        android:id="@+id/tv_display"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/appname"
         android:gravity="center"
+        android:textSize="30sp"
         />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <Button
+            android:layout_weight="1"
             android:id="@+id/btn_finish"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/msg_btn_finish"
             style="@style/ToggleStyle.Important"/>
         <Button
+            android:layout_weight="1"
             android:id="@+id/btn_toggle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="@string/msg_btn_toggle"
             style="@style/ToggleStyle"/>
-        <ImageButton
-            android:contentDescription="@string/contentDescriptionImageButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher"
-            />
-
     </LinearLayout>
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tv_display"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-    </LinearLayout>
-
-
+    <ImageButton
+        android:contentDescription="@string/contentDescriptionImageButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@mipmap/ic_launcher"
+        />
 </LinearLayout>
