ImageButton hat jetz 'ne ID

--- a/ToggleApp/app/src/main/res/layout/main.xml
+++ b/ToggleApp/app/src/main/res/layout/main.xml
@@ -30,6 +30,7 @@
             style="@style/ToggleStyle"/>
     </LinearLayout>
     <ImageButton
+        android:id="@+id/btn_image"
         android:contentDescription="@string/contentDescriptionImageButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
