--- a/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
+++ b/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
@@ -19,63 +19,33 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_weight="1"
-            android:layout_gravity="left"
             >
-            <RadioGroup
-                android:id="@+id/rgSource"
+            <Spinner
+                android:id="@+id/spinnerquellwaehrung"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-                <RadioButton
-                    android:id="@+id/rbSourceEuro"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-                <RadioButton
-                    android:id="@+id/rbSourceUSD"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-                <RadioButton
-                    android:id="@+id/rbSourceGRD"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-            </RadioGroup>
+                android:spinnerMode="dropdown"
+                android:prompt="@string/spquellwaehrung"
+                />
             <EditText
                 android:id="@+id/etAmountSource"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_gravity="right"
             android:orientation="vertical"
+            android:layout_weight="1"
             >
-            <RadioGroup
-                android:id="@+id/rgDest"
+            <Spinner
+                android:id="@+id/spinnerqzielwaehrung"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                >
-                <RadioButton
-                    android:id="@+id/rbDestEuro"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-                <RadioButton
-                    android:id="@+id/rbDestUSD"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-                <RadioButton
-                    android:id="@+id/rbDestGRD"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    />
-            </RadioGroup>
+                android:spinnerMode="dropdown"
+                android:prompt="@string/spqzielwaehrung"
+                />
             <TextView
                 android:id="@+id/tvResult"
                 android:layout_width="match_parent"
@@ -83,8 +53,7 @@
                 android:textSize="30sp"
                 />
         </LinearLayout>
-
-
     </LinearLayout>
+
 
 </LinearLayout>
