--- a/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
+++ b/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
@@ -28,7 +28,7 @@
                 android:prompt="@string/spquellwaehrung"
                 />
             <EditText
-                android:id="@+id/etAmountSource"
+                android:id="@+id/etSource"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -46,11 +46,10 @@
                 android:spinnerMode="dropdown"
                 android:prompt="@string/spqzielwaehrung"
                 />
-            <TextView
-                android:id="@+id/tvResult"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textSize="30sp"
+            <EditText
+                android:id="@+id/etDest"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 />
         </LinearLayout>
     </LinearLayout>
