--- a/Preferences/app/src/main/res/xml/preferences.xml
+++ b/Preferences/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,20 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <EditTextPreference
+    <PreferenceCategory android:title="Persönlich">
+        <EditTextPreference
         android:key="@string/key_vorname"
         android:title="Vorname"
-        android:defaultValue="Marius"
+            android:defaultValue="Max"
         />
+        <EditTextPreference
+            android:key="@string/key_nachname"
+            android:title="Nachname"
+            android:defaultValue="Mustermann"
+            />
+        <ListPreference
+            android:key="@string/key_geschlecht"
+            android:title="Geschlecht"
+            android:entries="@array/key_geschlechter"
+            android:entryValues="@array/gesch_entries_values"
+            />
+    </PreferenceCategory>
 </PreferenceScreen>
