--- a/Intents/app/src/main/res/layout/intent.xml
+++ b/Intents/app/src/main/res/layout/intent.xml
@@ -22,5 +22,10 @@
         android:layout_height="wrap_content"
         android:text="Implizter Intent mit Web"
         android:id="@+id/btnWeb"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Implizter Manual"
+        android:id="@+id/btnImplicitManual"/>
 
 </LinearLayout>
