--- a/Threading/app/src/main/res/layout/nl.xml
+++ b/Threading/app/src/main/res/layout/nl.xml
@@ -4,7 +4,8 @@
     android:layout_height="match_parent">
     <ProgressBar
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:indeterminateOnly="true"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
