--- a/Threading/app/src/main/res/layout/nl.xml
+++ b/Threading/app/src/main/res/layout/nl.xml
@@ -40,6 +40,11 @@
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
         android:text="Run on Handler"/>
+    <Button
+        android:id="@+id/btnRunOnLooperThread"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:text="Loop di doop"/>
 
 
 </LinearLayout>
