--- a/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
+++ b/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
@@ -28,7 +28,7 @@
                 android:prompt="@string/spquellwaehrung"
                 />
             <EditText
-                android:id="@+id/etSource"
+                android:id="@+id/etAmountSource"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
@@ -46,10 +46,11 @@
                 android:spinnerMode="dropdown"
                 android:prompt="@string/spqzielwaehrung"
                 />
-            <EditText
-                android:id="@+id/etDest"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+            <TextView
+                android:id="@+id/tvResult"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="30sp"
                 />
         </LinearLayout>
     </LinearLayout>
