--- a/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
+++ b/MoneyConverter/app/src/main/res/layout/moneyconverter.xml
@@ -54,6 +54,11 @@
                 />
         </LinearLayout>
     </LinearLayout>
-
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Settings"
+        android:id="@+id/btnSettings"
+        />
 
 </LinearLayout>
