--- a/MoneyConverter/app/src/main/res/xml/preferences.xml
+++ b/MoneyConverter/app/src/main/res/xml/preferences.xml
@@ -1,12 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <PreferenceCategory android:title="Alle">
-        <ListPreference
+        <EditTextPreference
             android:key="@string/key_nachkommastellen"
             android:title="Nachkommastellen"
-            android:entries="@array/nachkommastellen_entires"
-            android:entryValues="@array/nachkommastellen_values"
-            android:defaultValue="2"
+            android:defaultValue="10"
             />
-    </PreferenceCategory>
 </PreferenceScreen>
