--- a/Service/app/src/main/res/layout/activity_main.xml
+++ b/Service/app/src/main/res/layout/activity_main.xml
@@ -35,5 +35,25 @@
         android:layout_height="wrap_content"
         android:id="@+id/tvResult"
         />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="bind"
+            android:id="@+id/btnBind"
+            android:layout_weight="1"
+            />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="unbind"
+            android:id="@+id/btnunbind"
+            android:layout_weight="1"
+            />
+
+    </LinearLayout>
 
 </LinearLayout>
